package app.kodrek;

public class RegistrationRequest {
    private String name;
    private String email;
    private String username;
    private String password;
    private String codeforces;
    private String uva;

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public String getEmail() {
        return email;
    }

    public void setEmail(String email) {
        this.email = email;
    }

    public String getUsername() {
        return username;
    }

    public void setUsername(String username) {
        this.username = username;
    }

    public String getPassword() {
        return password;
    }

    public void setPassword(String password) {
        this.password = password;
    }

    public String getCodeForces() {
        return codeforces;
    }

    public void setCodeForces(String codeForces) {
        this.codeforces = codeForces;
    }

    public String getUva() {
        return uva;
    }

    public void setUva(String uva) {
        this.uva = uva;
    }
}
